--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,17 @@
     "start": "vite"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.2",
+    "firebase": "^10.12.3",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.52.1",
+    "react-router-dom": "^6.24.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
